# tkShopSystem

./: .gitignore  README.md  pyproject.toml  tkshopsystem.py
tkshopsystem/: __init__.py  __main__.py  auth.py  const.py  storage.py
